--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -3,6 +3,7 @@
   <div class="am-offcanvas-bar admin-offcanvas-bar">
     <ul class="am-list admin-sidebar-list">
       <li><a href="/"><span class="am-icon-home"></span> 首页</a></li>
+      <li><a href="{:url('user/index')}"><span class="am-icon-user-secret"></span> 员工管理</a></li>
       <li><a href="{:url('project/index')}"><span class="am-icon-table"></span> 项目管理</a></li>
       <li><a href={:url('customer/index')}"><span class="am-icon-pencil-square-o"></span> 客户管理</a></li>
     </ul>
