--- a/public/css/diy.css
+++ b/public/css/diy.css
@@ -1,1 +1,6 @@
 .border-bottom{border-bottom: #4db6ec 1px solid;}
+@media only screen and (max-width: 640px){
+	.admin-content-list li{border:0;}
+	.admin-content-list li:nth-child(1),.admin-content-list li:nth-child(3){border-right:1px solid #e9ecf1;}
+	.admin-content-list li:nth-child(1),.admin-content-list li:nth-child(2){border-bottom:1px solid #e9ecf1;}
+}
