--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,10 +11,10 @@
       </div>
 
       <ul class="am-avg-sm-2 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
-        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-file-text"></span><br/>本月项目<br/>10</a></li>
-        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月完成<br/>3</a></li>
-        <li><a href="#" class="am-text-secondary"><span class="am-icon-btn am-icon-user-md"></span><br/>意向客观<br/>3000</a></li>
-        <li><a href="#" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>客户资源<br/>80082</a></li>        
+        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-file-text"></span><br/>本月项目<br/>{$tj.zxm}</a></li>
+        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月完成<br/>{$tj.wc}</a></li>
+        <li><a href="#" class="am-text-secondary"><span class="am-icon-btn am-icon-user-md"></span><br/>意向客观<br/>{$tj.yx}</a></li>
+        <li><a href="#" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>成交客户<br/>{$tj.cj}</a></li>        
       </ul>
 
       <div class="am-g">
