--- a/application/index/view/project/tail.html
+++ b/application/index/view/project/tail.html
@@ -41,8 +41,8 @@
               </div>
             </div>
             <ul class="am-comments-list am-comments-list-flip">
-              {volist name="list" id="v" key="k"}
-              <li class="am-comment {if condition='$k%2'}am-comment-flip{/if}">
+              {volist name="list" id="v"}
+              <li class="am-comment {if condition='$v.uid!=$Think.session.user.id'}am-comment-flip{/if}">
                 <a href="#link-to-user-home">
                   <img src="__PUBLIC__/i/face.png" alt="" class="am-comment-avatar" width="48" height="48"/>
                 </a>
