--- a/application/index/view/login/index.html
+++ b/application/index/view/login/index.html
@@ -36,7 +36,7 @@
 <div class="am-g">
   <div class="am-u-lg-6 am-u-md-8 am-u-sm-centered">
     <br>
-    <form method="post" method="{:url('login/check')}" class="am-form">
+    <form method="post" action="{:url('login/check')}" class="am-form">
       <label for="email">账号:</label>
       <input type="text" name="account" id="text" value="">
       <br>
