--- a/application/index/view/user/add.html
+++ b/application/index/view/user/add.html
@@ -5,7 +5,7 @@
   <div class="admin-content">
     <div class="admin-content-body">
       <div class="am-cf am-padding am-padding-bottom-0">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">个人资料</strong> / <small>Personal information</small></div>
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">员工管理</strong> / <small>员工信息</small></div>
       </div>
 
       <hr/>
@@ -68,7 +68,7 @@
 
             <div class="am-form-group">
               <div class="am-u-sm-9 am-u-sm-push-3">
-                <button type="submite" class="am-btn am-btn-primary">保存修改</button>
+                <button type="submite" class="am-btn am-btn-primary">保存</button>
               </div>
             </div>
           </form>
