--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -2,16 +2,19 @@
 <div class="admin-sidebar am-offcanvas" id="admin-offcanvas">
   <div class="am-offcanvas-bar admin-offcanvas-bar">
     <ul class="am-list admin-sidebar-list">
-      <li><a href="/"><span class="am-icon-home"></span> 首页</a></li>
-      <li><a href="{:url('user/index')}"><span class="am-icon-user-secret"></span> 员工管理</a></li>
+      <li><a href="/"><span class="am-icon-home"></span> 系统首页</a></li>
+      {if condition="$Think.session.user.type"}
+      <li><a href="{:url('user/index')}"><span class="am-icon-user-secret"></span> 员工管理</a></li>{/if}
       <li><a href="{:url('project/index')}"><span class="am-icon-table"></span> 项目管理</a></li>
       <li><a href="{:url('customer/index')}"><span class="am-icon-pencil-square-o"></span> 客户管理</a></li>
     </ul>
 
     <div class="am-panel am-panel-default admin-sidebar-panel">
-      <div class="am-panel-bd">
+      <div class="am-panel-bd">      
         <p><span class="am-icon-bookmark"></span> 公告</p>
-        <p>幸福是奋斗出来的。<br />—— Dpwl</p>
+        {list t="3" limit="1" order="time desc"}
+        <p>{$content}<br />—— {$name}</p>
+        {/list}
       </div>
     </div>
   </div>
