--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -14,7 +14,7 @@
       <hr>
 
       <div class="am-g">
-      {if condition="$Think.session.uset.type"}
+      {if condition="$Think.session.user.type"}
         <div class="am-u-sm-3 am-u-md-6">
           <div class="am-btn-toolbar">
             <div class="am-btn-group am-btn-group-xs">
