--- a/application/index/view/project/add.html
+++ b/application/index/view/project/add.html
@@ -8,7 +8,7 @@
   <div class="admin-content-body">
     <div class="am-cf am-padding am-padding-bottom-0">
       <div class="am-fl am-cf">
-        <strong class="am-text-primary am-text-lg">项目管理</strong> /
+        <strong class="am-text-primary am-text-lg"><a href="{:url('project/index')}">项目管理</a></strong> /
         <small>新建项目</small>
       </div>
     </div>
