--- a/application/index/view/user/add.html
+++ b/application/index/view/user/add.html
@@ -5,7 +5,7 @@
   <div class="admin-content">
     <div class="admin-content-body">
       <div class="am-cf am-padding am-padding-bottom-0">
-        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">员工管理</strong> / <small>员工信息</small></div>
+        <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg"><a href="{:url('user/index')}">员工管理</a></strong> / <small>员工信息</small></div>
       </div>
 
       <hr/>
