--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -11,10 +11,10 @@
       </div>
 
       <ul class="am-avg-sm-2 am-avg-md-4 am-margin am-padding am-text-center admin-content-list ">
-        <li><a href="#" class="am-text-success"><span class="am-icon-btn am-icon-file-text"></span><br/>本月项目<br/>{$tj.zxm}</a></li>
-        <li><a href="#" class="am-text-warning"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月完成<br/>{$tj.wc}</a></li>
-        <li><a href="#" class="am-text-secondary"><span class="am-icon-btn am-icon-user-md"></span><br/>意向客观<br/>{$tj.yx}</a></li>
-        <li><a href="#" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>成交客户<br/>{$tj.cj}</a></li>        
+        <li><a href="{:url('project/index')}" class="am-text-success"><span class="am-icon-btn am-icon-file-text"></span><br/>本月项目<br/>{$tj.zxm}</a></li>
+        <li><a href="{:url('project/index','zt=1')}" class="am-text-warning"><span class="am-icon-btn am-icon-briefcase"></span><br/>本月完成<br/>{$tj.wc}</a></li>
+        <li><a href="{:url('customer/index','zt=1')}" class="am-text-secondary"><span class="am-icon-btn am-icon-user-md"></span><br/>意向客观<br/>{$tj.yx}</a></li>
+        <li><a href="{:url('customer/index','zt=2')}" class="am-text-danger"><span class="am-icon-btn am-icon-recycle"></span><br/>成交客户<br/>{$tj.cj}</a></li>        
       </ul>
 
       <div class="am-g">
@@ -27,7 +27,7 @@
                   <a href="#"><img src="__PUBLIC__/i/face.png" alt="" class="am-comment-avatar" width="48" height="48"></a>
                   <div class="am-comment-main">
                     <header class="am-comment-hd">
-                      <div class="am-comment-meta"><a href="#" class="am-comment-author">{$list.name}</a> 更新于 <time>{$list.time|date='Y-m-d H:i:s',###}</time></div>
+                      <div class="am-comment-meta"><a href="#" class="am-comment-author">{$list.name}</a> 更新于 <time>{if condition="$list.time"}{$list.time|date='Y-m-d H:i:s',###}{/if}</time></div>
                     </header>
                     <div class="am-comment-bd"><p>{$list.content}</p>
                     </div>
