--- a/public/css/diy.css
+++ b/public/css/diy.css
@@ -1,3 +1,4 @@
+body{background:#d5edfe;}
 .border-bottom{border-bottom: #4db6ec 1px solid;}
 @media only screen and (max-width: 640px){
 	.admin-content-list li{border:0;}
